# cropwatch-cli

./: .gitignore  README.md  pyproject.toml
cropwatch/: alerts.py  anomaly.py  baseline.py  cache.py  cli.py  cli_alerts.py  cli_anomaly.py  cli_baseline.py  cli_compare.py  cli_correlation.py  cli_forecast.py  cli_heatmap.py  cli_moving_avg.py  cli_percentile.py  cli_seasonavg.py  cli_smooth.py  cli_trend.py  compare.py  config.py  correlation.py  export.py  forecast.py  formatter.py  heatmap.py  history.py  moving_avg.py  percentile.py  ranking.py  seasonavg.py  smooth.py  sparkline.py  summary.py  usda_client.py
tests/: test_alerts.py  test_anomaly.py  test_baseline.py  test_cache.py  test_cli.py  test_cli_alerts.py  test_cli_anomaly.py  test_cli_compare.py  test_cli_correlation.py  test_cli_forecast.py  test_cli_heatmap.py  test_cli_moving_avg.py  test_cli_trend.py  test_compare.py  test_config.py  test_correlation.py  test_export.py  test_forecast.py  test_formatter.py  test_heatmap.py  test_history.py  test_moving_avg.py  test_percentile.py  test_ranking.py  test_seasonavg.py  test_smooth.py  test_sparkline.py  test_summary.py  test_usda_client.py
